--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "axios": "^1.3.3",
     "snoostorm": "^1.5.2",
     "snoowrap": "^1.23.0"
+  },
+  "scripts": {
+    "start": "node ./dist/approach-control.js"
   }
 }
